# Lite-Render

./: CMakeLists.txt  README.md
include/lr/common/: physical_device.hpp  rendering_device.hpp  rendering_server.hpp  wsi.hpp
include/lr/vk10/: physical_device.hpp  rendering_device.hpp  rendering_server.hpp  wsi.hpp
src/lr/vk10/: CMakeLists.txt  physical_device.cpp  rendering_device.cpp  rendering_server.cpp
test/: CMakeLists.txt  main.cpp
